--- a/views/footer.html
+++ b/views/footer.html
@@ -6,9 +6,10 @@
 				<div class='footer-about-us'>
 					<h2>Hcode Store</h2>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis sunt id doloribus vero quam
-					   laborum quas alias dolores blanditiis iusto consequatur, modi aliquid eveniet eligendi iure eaque
-					   ipsam iste, pariatur omnis sint! Suscipit, debitis, quisquam. Laborum commodi veritatis magni
-					   at?</p>
+						laborum quas alias dolores blanditiis iusto consequatur, modi aliquid eveniet eligendi iure
+						eaque
+						ipsam iste, pariatur omnis sint! Suscipit, debitis, quisquam. Laborum commodi veritatis magni
+						at?</p>
 					<div class='footer-social'>
 						<a href='https://www.facebook.com/hcodebr'
 						   target='_blank'><i class='fa fa-facebook'></i></a>
@@ -35,11 +36,7 @@
 				<div class='footer-menu'>
 					<h2 class='footer-wid-title'>Categorias</h2>
 					<ul>
-						<li><a href='#'>Categoria Um</a></li>
-						<li><a href='#'>Categoria Dois</a></li>
-						<li><a href='#'>Categoria Três</a></li>
-						<li><a href='#'>Categoria Quarto</a></li>
-						<li><a href='#'>Categoria Cinco</a></li>
+						{include="categories-menu"}
 					</ul>
 				</div>
 			</div>
@@ -67,8 +64,10 @@
 		<div class='row'>
 			<div class='col-md-8'>
 				<div class='copyright'>
-					<p>&copy; 2017 Hcode Treinamentos. <a href='http://www.hcode.com.br'
-					                                      target='_blank'>hcode.com.br</a></p>
+					<p>&copy; 2017 Hcode Treinamentos.
+						<a href='http://www.hcode.com.br'
+						   target='_blank'>hcode.com.br</a>
+					</p>
 				</div>
 			</div>
 			
